@@ -1,5 +1,11 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-10-07 mmichaud <michael.michaud@free.fr>
+  * Fix bug id 3571031 : Too long field names saved into dbf
+  * Fix bug id 3570707 : LayerNameRenderer and Windows 7 issue
+  * Added a dummy reader as an attempt to solve bug 3446420 : Cannot open zipped 
+    shapefile containing also xml
+
 2012-10-02 mmichaud <michael.michaud@free.fr>
   * Make csv-driver compatible with SaveDatasetsPlugIn and improve exception 
     handling
